full application is build

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1 class="text-4xl">Index Page</h1>
-<h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, consectetur.</h3>
+<h3 class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, consectetur.</h3>
+<button class="button24">Hello Vishwajeet</button>
 {% endblock content %}
