--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"  />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    {% include 'includes/navigation.html' %}
-    {% block content %}{% endblock content %}
+    {% include 'includes/navigation.html' %} {% block content %}
+    {% endblock content %}
   </body>
 </html>
-
